# lifescape

./: .claudeignore  .env.example  .gitignore  .gitleaks-dir.toml  .gitleaks.toml  .prettierignore  .qualityrc.json  .stylelintrc.json  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  commitlint.config.js  eslint.config.cjs  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: quality.yml
.husky/: pre-push
api/: index.py
config/: gates.default.yaml  metrics.yaml  regions.yaml  research_brief.live.yaml  research_brief.yaml  sources.yaml  user_profile.example.yaml  weights.default.yaml
data/benchmarks/: evidence.csv
docs/: api-inventory.md  architecture.md  data-dictionary.md  engineering-standard.md  evaluation.md  implementation-plan.md  limitations.md  local-app-spec.md  manual-verification.md  master-spec.md  methodology.md  source-policy.md
ops/: vercel-firewall.json
scripts/: run-gitleaks.sh  verify-vercel-firewall.sh
src/lifescape/: cli.py  config.py  db.py  evidence.py  gates.py  normalization.py  pipeline.py  reports.py  resources.py  scoring.py  sensitivity.py  web.py
src/retirement_engine/: __init__.py  cli.py  config.py  (+11 more)
templates/: README.md
tests/: conftest.py  test_census_acs.py  test_cli.py  test_config.py  test_connectors.py  test_gates.py  test_missing_data.py  test_noaa_gsoy.py  test_normalization.py  test_orchestrate.py  test_packaging.py  test_quality_config.py  test_reports.py  test_scoring.py  test_sensitivity.py  test_source_policy.py  test_user_journey.py  test_web.py
(+24 files in other folders)
