[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retirement-decision-engine"
version = "0.1.0"
description = "Local-first, evidence-backed retirement location decision engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.8,<3",
  "pyyaml>=6,<7",
  "sqlalchemy>=2.0,<3",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "mypy>=1.11,<2",
  "pip-audit>=2.10,<3",
  "playwright>=1.55,<2",
  "pytest>=9,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "types-PyYAML>=6,<7",
]

[project.scripts]
retire = "retirement_engine.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/retirement_engine"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "retirement_engine/resources/config"
"data/benchmarks/evidence.csv" = "retirement_engine/resources/benchmark-evidence.csv"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["retirement_engine"]
